--- a/TSP/TSP/App.config
+++ b/TSP/TSP/App.config
@@ -7,7 +7,8 @@
         <add key="wielkośćPopulacji" value="100"/>
         <add key="liczbaPokoleń" value="100"/>
         <add key="krzyżowanie" value="OX"/>
-        <add key="selekcja" value="zwykła"/>
-        <add key="prawdopodobieństwoMutacji" value="0"/>
+        <add key="selekcja" value="turniejowa"/>
+        <add key="prawdopodobieństwoMutacji" value="0.5"/>
+        <add key="nazwaPlikuWejściowego" value="gr9882"/>
     </appSettings>
 </configuration>
