algorytm do obliczen v1

--- a/TSP/TSP/App.config
+++ b/TSP/TSP/App.config
@@ -10,5 +10,6 @@
         <add key="selekcja" value="turniejowa"/>
         <add key="prawdopodobieństwoMutacji" value="0.5"/>
         <add key="nazwaPlikuWejściowego" value="gr9882"/>
+        <add key="liczbaBaterii" value="22"/>
     </appSettings>
 </configuration>
