--- a/TSP/TSP/TSP.csproj
+++ b/TSP/TSP/TSP.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selekcja.cs" />
+    <Compile Include="Testy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
