dodana selekcja przez ruletkę wartościową, testy dla OX i ruletki

--- a/TSP/TSP/App.config
+++ b/TSP/TSP/App.config
@@ -7,7 +7,7 @@
         <add key="wielkośćPopulacji" value="100"/>
         <add key="liczbaPokoleń" value="1"/>
         <add key="krzyżowanie" value="OX"/>
-        <add key="selekcja" value="turniejowa"/>
+        <add key="selekcja" value="ruletkaWartościowa"/>
         <add key="prawdopodobieństwoMutacji" value="0.5"/>
         <add key="nazwaPlikuWejściowego" value="gr9882"/>
         <add key="liczbaBaterii" value="22"/>
